--- a/TalCloud/templates/oauth/google_login.html
+++ b/TalCloud/templates/oauth/google_login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <meta name="google-signin-client_id"
-        content="128155221754-sedu253kpp5j3j88v1sgcrgs1c4e2201.apps.googleusercontent.com">
+        content="399712944906-j5nf9q55pf14g475cb917r8phue6nvfd.apps.googleusercontent.com">
 </head>
 <body>
 <div id="my-signin"></div>
@@ -18,7 +18,7 @@
         let token = googleUser.getAuthResponse().id_token
         console.log('Token: ' + token)
 
-        fetch('http://localhost/api/v1/auth/google/', {
+        fetch('http://localhost:10000/api/v1/auth/google/', {
             method: 'POST',
             headers: {'Content-Type': 'application/json;charset=UTF-8'},
             body: JSON.stringify({
